--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@nuxt/icon": "^1.0.0",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/seo": "^2.0.0-rc.11",
-    "nuxt": "^3.12.2"
+    "@vee-validate/zod": "^4.13.1",
+    "nuxt": "^3.12.2",
+    "vee-validate": "^4.13.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
