--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/seo": "^2.0.0-rc.11",
     "@vee-validate/zod": "^4.13.1",
+    "gsap": "^3.12.5",
     "nuxt": "^3.12.2",
     "vee-validate": "^4.13.1",
     "zod": "^3.23.8"
