--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vee-validate/zod": "^4.13.1",
     "gsap": "^3.12.5",
     "nuxt": "^3.12.2",
+    "nuxt-swiper": "^1.2.2",
     "vee-validate": "^4.13.1",
     "zod": "^3.23.8"
   },
